add route for admin-server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,7 @@ zuul:
       path: /demo/**
       serviceId: dn-demo-service
       stripPrefix: true
+    admin-server:
+      path: /admin-server/**
+      serviceId: admin-service
+      stripPrefix: true
